2002-07-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	(Answer_To_Client): Correctly set the peername in all cases.
	Checked-in for Dmitriy Anisimkov.

2002-07-03  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-messages.ads:
	(Content_Disposition_Token): New constant.
	(Content_Disposition): New routine.
	Minor reformatting.

	* aws-messages.adb:
	(Content_Disposition): New routine.
	Put constant some variables.
	Minor reformatting.

	* aws-client.ads, aws-client.adb:
	(Upload): New routine.
	Minor reformatting.

2002-06-30  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-resources-files.adb:
	(Open): Remove buffer initialization, this is not needed.

2002-06-29  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-resources.ads, aws-resources.adb:
	Change implementation. Now all visible routines are using the same
	 type and the dispatching routines are in the private part. This
	 is a cleaner implementation.
	
	* aws-resources-files.ads, aws-resources-files.adb:
	Change related to new AWS.Resources design.
	
	* aws-resources-embedded.ads, aws-resources-embedded.adb: 
	Change related to new AWS.Resources design.
	
	* aws-server-protocol_handler.adb:
	(Send_File): Use File_Type instead of File_Access.

2002-06-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(build): Do not handle the aws-os_lib.adb file here.

	* aws-client.adb:
	(Read_Binary_Message): Store file content into the heap to avoid
	 stack overflow when reading large files and returns an access
	 type instead of an array.

	* aws-server-protocol_handler.adb:
	(Send_File): Use AWS.Resources.File_Timestamp instead of
	 AWS.OS_Lib one.
	(Send_File): Use AWS.Resources services instead of AWS.OS_Lib
	 ones.
	(Send_File_Time): Idem.
	Minor reformatting.
	
	* aws-response.adb:
	(File): Use AWS.Resources instead of AWS.OS_Lib.

	* aws-resources-embedded.ads, aws-resources-embedded.adb:
	Initial revision.

	* aws-resources-files.ads, aws-resources-files.adb:
	Initial revision.
